--- a/SaleClient/src/app/product/product.component.html
+++ b/SaleClient/src/app/product/product.component.html
@@ -19,9 +19,12 @@
       <td><a [routerLink]="['/product/', product.id]">{{ product.name }}</a></td>
       <td>{{ product.description}}</td>
       <td>
-        <img [src]="product.image">
+        <img [src]="product.image" width="50">
       </td>
       <td>{{ product.price}}+VND</td>
+      <td>
+        <a [routerLink]="['/cart', { id:product.id }]">Buy Now</a>
+    </td>
     </tr>
   </tbody>
 </table>
