--- a/SaleClient/src/app/product/product.component.html
+++ b/SaleClient/src/app/product/product.component.html
@@ -1,5 +1,4 @@
-<h1>Product list</h1>
-
+<app-header ></app-header>
 <p *ngIf="!(products$ | async)"><em>Loading...</em></p>
 <p>
   <a [routerLink]="['/add']" class="btn btn-primary float-right mb-3">New post</a>
@@ -9,7 +8,6 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Description</th>
       <th>Image</th>
       <th>Price</th>
     </tr>
@@ -17,9 +15,8 @@
   <tbody>
     <tr *ngFor="let product of (products$ | async)">
       <td><a [routerLink]="['/product/', product.id]">{{ product.name }}</a></td>
-      <td>{{ product.description}}</td>
       <td>
-        <img [src]="product.image" width="50">
+        <img [src]="product.image" width="50" height="60">
       </td>
       <td>{{ product.price}}+VND</td>
       <td>
