--- a/SaleClient/src/app/home/home.component.html
+++ b/SaleClient/src/app/home/home.component.html
@@ -1,7 +1,5 @@
-<nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand text-white">JWT Auth System</a>
-  <button class="btn btn-danger my-2 my-sm-0" (click)="onLogout()">Logout</button>
-</nav>
+<app-header ></app-header>
+
 
 <div class="card m-5" style="width:18rem" *ngIf="userDetails">
   <ul class="list-group">
