add order function

--- a/SaleClient/src/app/order/order.component.html
+++ b/SaleClient/src/app/order/order.component.html
@@ -33,5 +33,5 @@
     <li class="list-group-item"><strong>Email : </strong>{{userDetails.email}}</li>
   </ul>
 </div>
-
+<button (click)="checkOut()" class="btn btn-danger float-right">Checkout</button>
 
