update order function

--- a/SaleClient/src/app/order/order.component.html
+++ b/SaleClient/src/app/order/order.component.html
@@ -33,5 +33,8 @@
     <li class="list-group-item"><strong>Email : </strong>{{userDetails.email}}</li>
   </ul>
 </div>
-<button (click)="checkOut()" class="btn btn-danger float-right">Checkout</button>
+<div class="card m-5" style="width:18rem" >
+  <button (click)="checkOut()" class="btn btn-danger float-left">Checkout</button>
+</div>
+
 
