--- a/SaleClient/src/app/header/header.component.html
+++ b/SaleClient/src/app/header/header.component.html
@@ -7,6 +7,9 @@
         </button>
         <div id="navbarCollapse" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
+              <li class="nav-item">
+                <a [routerLink] = "'/adminpanel'" class="nav-link">Admin Panel</a>
+              </li>
                 <li class="nav-item">
                   <a [routerLink] = "'/home'" class="nav-link">Home</a>
               </li>
